--- a/energyDataApp/energyDataApp.csproj
+++ b/energyDataApp/energyDataApp.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="9.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
