--- a/energyDataApp/energyDataApp.csproj
+++ b/energyDataApp/energyDataApp.csproj
@@ -9,6 +9,9 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.0" />
     <PackageReference Include="NpgSql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Migrations\20181124235535_EnergyReadings.cs" />
+    <Compile Remove="Models\EmptyClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Migrations\" />
