trying to get my js to work on a live version

--- a/energyDataApp/energyDataApp.csproj
+++ b/energyDataApp/energyDataApp.csproj
@@ -24,5 +24,6 @@
     <Compile Remove="Migrations\20181125005930_EnergyRecords.cs" />
     <Compile Remove="Migrations\EnergyDataContextModelSnapshot.cs" />
     <Compile Remove="Models\EmptyClass.cs" />
+    <Compile Remove="Controllers\EnergyDataContext.cs" />
   </ItemGroup>
 </Project>
